# RTS_ROS_node_Trimble

./: .gitignore  CMakeLists.txt  README.md  package.xml
doc/: LICENSE  README.md  references.bib  theodolite_report.tex  theodolite_report_style.tex
doc/latexGoodPractices/: README.md  exampleReferences.bib  preamble.tex
include/Common/Connection/: ConnectionState.h  ICommunicator.h
include/Trimble.Contracts/SpatialImaging/: ICameraProperty.h  IExtrinsicCameraRelativeToTelescopeImageProperty.h  IExtrinsicEdmRelativeToTelescopeImageProperty.h  IExtrinsicTelescopeRelativeToInstrumentImageProperty.h  IIntrinsicCroppingProperty.h  IIntrinsicDistortionImageProperty.h  IIntrinsicImageProperty.h  ISpatialImageProperty.h  LensType.h  SpatialImagePropertyType.h
include/Trimble.Ssi.DriverManagement/: DriverManagerInstance.h
include/Trimble.Ssi.Interfaces/Common/: DisconnectMode.h  Exception.h  GSMModemException.h  HaVaAngles.h  IApplicationLicense.h  IDriver.h  IDriverInformation.h  IDriverManager.h  ISensor.h  ISsiInterface.h  ISsiInterfaceProvider.h  IStreamingStateChangedListener.h  InternetNotConnectedException.h  InvalidParameterException.h  LicenseException.h  NotConnectedException.h  OperationCanceledException.h  OperationNotSupportedException.h  OperationTimedOutException.h  OutOfRangeException.h  SensorBusyException.h  SensorNeedsCalibrationException.h  SphericalAngles.h  SsiException.h  SsiInterfaceType.h  StreamingState.h  StreamingStateChangedEvent.h  TimeEstimate.h
include/Trimble.Ssi.Interfaces/Common/Authentication/: ISsiAuthentication.h
include/Trimble.Ssi.Interfaces/Common/Calibration/: AutomaticAction.h  CalibrationException.h  CalibrationParameterType.h  CalibrationProgress.h  CalibrationRequirementType.h  CalibrationResultException.h  CalibrationResultType.h  CalibrationResultsEvent.h  CalibrationState.h  CalibrationStateChangedEvent.h  CalibrationStepChangedEvent.h  CalibrationStepType.h  CalibrationType.h  CalibrationTypeEvent.h  IActiveCalibrationChangedListener.h  ICalibrationContainer.h  ICalibrationParameter.h  ICalibrationParameterIgnoreWarning.h  ICalibrationProgressListener.h  ICalibrationRequirement.h  ICalibrationResult.h  ICalibrationResultsListener.h  ICalibrationStateChangedListener.h  ICalibrationStep.h  ICalibrationStepAutomatic.h  ICalibrationStepChangedListener.h  ICalibrationStepManual.h  ICalibrationStepResult.h  IMagnetometerAlignment.h  IMagnetometerCalibration.h  ISsiCalibration.h  ITiltCalibration.h  InvalidCalibrationPositionException.h  ManualAction.h  TiltCompensatorCalibrationException.h
include/Trimble.Ssi.Interfaces/Common/Connection/: AlreadyConnectedException.h  ConnectionParameterType.h  ConnectionSettings.h  ConnectionType.h  IConnectionParameter.h  IConnectionParameterBluetoothSettings.h  IConnectionParameterExternalSettings.h  IConnectionParameterPin.h  IConnectionParameterPuk.h  IConnectionParameterRadioSettings.h  IConnectionParameterSerialNumber.h  IConnectionParameterSerialSettings.h  IConnectionParameterTCPIPSettings.h  IConnectionParameterUSBSettings.h  IConnectionParameterWifiSettings.h  IConnectionStateChangedListener.h  IMessageReceivedListener.h  ITCPCommunicator.h
include/Trimble.Ssi.Interfaces/Common/Diagnostics/: IRawMessageListener.h  ISsiDiagnostics.h
include/Trimble.Ssi.Interfaces/Common/FirmwareUpdate/: ISsiFirmwareUpdate.h
include/Trimble.Ssi.Interfaces/Common/InstrumentAccuracies/: IInstrumentAccuracy.h  ISsiInstrumentAccuracies.h
include/Trimble.Ssi.Interfaces/Common/Power/: BatteryChargingState.h  BatteryState.h  ExternalPowerState.h  IBattery.h  ICurrentPowerSourceChangedListener.h  IExternalPower.h  IInternalBattery.h  IPowerSource.h  IRadioBattery.h  ISsiPower.h  PowerSourceEvent.h  PowerSourceType.h
include/Trimble.Ssi.Interfaces/Common/SensorProperties/: IFirmwareUpdateRecommendedProperty.h  IInstalledMemoryProperty.h  ISensorFirmwareProperty.h  ISensorFirmwareWarrantyDateProperty.h  ISensorModelProperty.h  ISensorNameProperty.h  ISensorProperty.h  ISensorSerialNumberProperty.h  ISsiSensorProperties.h  IValuedSensorProperty.h  SensorPropertyType.h
include/Trimble.Ssi.Interfaces/Common/StartupConfiguration/: ISsiStartupConfiguration.h  StartupMode.h
include/Trimble.Ssi.Interfaces/Common/Subscriptions/: ISsiSubscriptions.h  ISubscription.h  SubscriptionType.h
include/Trimble.Ssi.Interfaces/GNSS/: Coordinates.h  TectonicPlate.h
include/Trimble.Ssi.Interfaces/GNSS/Antenna/: AntennaType.h  IAntenna.h  IAntennaExternal.h  IAntennaInternal.h  ISsiAntenna.h
include/Trimble.Ssi.Interfaces/GNSS/DataLog/: AntennaHeightConfiguration.h  IAvailableMemory.h  IFastStaticSurveyLogSession.h  ILogAntenna.h  ILogAntennaHeight.h  ILogAntennaHeightParameter.h  ILogDiagnosticParameter.h  ILogInfo.h  (+43 more)
include/Trimble.Ssi.Interfaces/Scanner/: IResolutionAngular.h  IResolutionPreset.h  IResolutionSpatial.h  IResolutionSpeed.h  IResolutionTimeBased.h  IScanDataListener.h  IScanEstimate.h  IScanParameter.h  IScanProgressListener.h  IScanResolution.h  IScanStateListener.h  ISsiScanner.h  PresetType.h  ResolutionType.h  ScanDataUpdate.h  ScanProgressUpdate.h  ScanState.h  ScanStateUpdate.h
include/Trimble.Ssi.Interfaces/Vision/: ISsiVision.h
launch/: theodolite_calibration_with_prim.launch  theodolite_collect_markers.launch  theodolite_interactive_master.launch  theodolite_listener.launch  theodolite_master.launch  theodolite_node.launch  theodolite_node_single.launch
script/: accuracy_calibration_theodolite.py
src/: ObservationListener.cpp  ObservationListener.h  SsiCallbacks.cpp  SsiCallbacks.h  SsiCommand.cpp  SsiCommand.h  SsiInstrument.cpp  SsiInstrument.h  TCPCommunicator.cpp  TCPCommunicator.h  TCPServer.cpp  TCPServer.h  USBCommunicator.cpp  USBCommunicator.h  VideoStreamingListener.cpp  VideoStreamingListener.h  lora_radio.cpp  lora_radio.h  radio_message_serialize.cpp  radio_message_serialize.h  theodolite_collect_calib_prism.cpp  theodolite_collect_markers.cpp  theodolite_interactive_master.cpp  theodolite_listener.cpp  theodolite_master.cpp  theodolite_node.cpp  theodolite_node_test.cpp
(+500 files in other folders)
